# guard-core

./: .gitignore  .mike.yml  .pre-commit-config.yaml  .safety-project.ini  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  SECURITY.md  TYPESCRIPT-GUARD.md  compose.yml  mkdocs.yml  pyproject.toml  setup.py  vulture_whitelist.py
.github/: FUNDING.yml  labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/scripts/: bump_version.py
.github/workflows/: ci.yml  code-ql.yml  docs.yml  greetings.yml  release.yml  scheduled-lint.yml  stale.yml  summary.yml
docs/: index.md  installation.md  llms.txt  release-notes.md  robots.txt
docs/adapters/: decorators.md  getting-started.md  guard-request.md  guard-response.md  middleware-integration.md  testing.md
docs/api/: ban-config.md  behavior-rules.md  cloud-ip-store.md  decorators.md  detection-engine.md  detection-result.md  handlers.md  models.md  protocols.md  utilities.md
docs/architecture/: dependency-injection.md  events.md  overview.md  pipeline.md  protocols.md  telemetry.md
docs/configuration/: detection-tuning.md  logging.md  security-config.md
docs/css/: custom.css
docs/internals/: api-surface-audit.md  behavioral.md  check-implementations.md  checks.md  cloud-providers.md  detection-engine.md  ip-management.md  rate-limiting.md  redis.md  security-headers.md
docs/migration/: v1-to-v2.md
docs/versions/: versions.json
guard_core/: __init__.py  exceptions.py  models.py  utils.py
guard_core/core/: __init__.py
guard_core/decorators/: __init__.py  access_control.py  advanced.py  authentication.py  base.py  behavioral.py  content_filtering.py  rate_limiting.py
guard_core/detection_engine/: compiler.py  monitor.py  preprocessor.py  safe_regex.py  semantic.py
guard_core/handlers/: __init__.py  behavior_handler.py  cloud_handler.py  cloud_ip_stores.py  dynamic_rule_handler.py  ipban_handler.py  ipinfo_handler.py  ratelimit_handler.py  redis_handler.py  security_headers_handler.py  suspatterns_handler.py
guard_core/protocols/: __init__.py  agent_protocol.py  cloud_ip_store_protocol.py  geo_ip_protocol.py  middleware_protocol.py  redis_protocol.py  request_protocol.py  response_protocol.py
guard_core/scripts/: rate_lua.py
guard_core/sync/: __init__.py  detection_result.py  utils.py
scripts/: unasync.py
tests/: conftest.py  test_agent_error_clarity.py  test_behavior_rule_ban_duration.py  test_check_log_muting.py  test_cloud_ip_refresh_on_demand.py  test_cloud_ip_stores.py  test_cloud_region_scope.py  test_compiler_cache.py  test_composite_enricher.py  test_composite_handler.py  test_composite_handler_extra.py  test_cors_handler.py  test_detection_categories.py  test_detection_exclusion_integration.py  test_detection_result.py  test_detection_result_propagation.py  test_detection_singleton_configuration.py  test_dynamic_rule_atomicity.py  test_enricher.py  test_enricher_behavior_correlation.py  test_enricher_end_to_end.py  test_enricher_identity.py  test_enricher_logfire_integration.py  test_enricher_otel_integration.py  test_enricher_rule_correlation.py  test_enricher_threat_score.py  test_event_bus_filtering.py  test_event_types.py  test_exceptions.py  test_handler_edge_cases.py  test_handler_initializer.py  test_handler_initializer_enricher.py  test_handler_initializer_factories.py  test_handler_initializer_lazy_init.py  test_handlers_integration.py  test_init_instrumentation.py  test_ipban_cidr.py  test_ipban_eviction.py  test_ipban_lifecycle.py  test_ipban_ttl.py  (+16 more)
tests/attack_simulation/: README-campaign.md  __main__.py  baseline.json  harness.py  loaders.py  metrics.py  mutations.py  reporter.py  runner.py  score_payloads.py  test_attack_simulation.py  test_harness.py  test_loaders.py  test_metrics.py  test_mutations.py  test_reporter.py  test_runner.py  test_score_payloads.py
tests/integration/: test_otel_jaeger_integration.py
tests/test_agent/: conftest.py  test_behavior_agent_integration.py  test_cloud_agent_integration.py  test_decorator_agent_integration.py  test_drh_agent_integration.py  test_ipban_agent_integration.py  test_ipinfo_agent_integration.py  test_middleware_agent_integration.py  test_models_agent_integration.py  test_ratelimit_agent_integration.py  test_redis_agent_integration.py  test_suspatterns_agent_integration.py  test_utils_agent_integration.py
tests/test_cloud_ips/: test_cloud_ips.py  test_nonblocking_refresh.py
tests/test_core/: test_behavioral.py  test_behavioral_global_rules.py  test_bypass_handler.py  test_check_implementations.py  test_checks_base.py  test_cloud_ip_store_resolution.py  test_cloud_provider_edge_cases.py  test_edge_cases.py  test_events.py  test_handler_initializer.py  test_helpers.py  test_https_enforcement_edge_cases.py  test_initialization.py  test_initialization_cloud_provider_typing.py  test_ip_security_edge_cases.py  test_metrics.py  test_middleware_events.py  test_pipeline.py  test_rate_limit_edge_cases.py  test_rate_limit_noscript.py  test_response_factory.py  test_response_factory_global_rules.py  test_routing_resolver.py  test_time_window_edge_cases.py  test_validator.py
tests/test_decorators/: test_access_control_block_clouds.py  test_access_control_country_normalization.py  test_advanced_edge_cases.py  test_base.py  test_behavior_handler.py  test_behavior_handler_edge_cases.py  test_behavior_rule_correlation.py  test_detection_exclusion.py  test_mixins.py  test_route_config_cloud_providers.py
tests/test_detection_engine/: test_compiler.py  test_detection_engine.py  test_monitor.py  test_preprocessor.py  test_semantic.py
tests/test_features/: test_configurable_cloud_refresh.py  test_context_aware_detection.py  test_dynamic_rule_cloud_providers.py  test_last_updated_cloud.py  test_structured_json_logging.py
tests/test_handlers/: test_behavior.py  test_cloud.py  test_dynamic_rule.py  test_ipban.py  test_ipinfo.py  test_ratelimit.py  test_redis_handler.py  test_security_headers.py  test_suspatterns.py
(+325 files in other folders)
