[project]
name = "guard-core"
version = "3.1.1"
description = "Framework-agnostic security engine for the Guard ecosystem."
authors = [
    {name = "Renzo Franceschini", email = "rennf93@users.noreply.github.com"}
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10,<3.15"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "aiohttp",
    "cachetools",
    "maxminddb",
    "pydantic",
    "redis",
    "requests",
    "typing-extensions",
]

[project.urls]
Homepage = "https://github.com/rennf93/guard-core"

[project.optional-dependencies]
dev = [
    "bandit[toml]",
    "deptry",
    "guard-agent",
    "mkdocs",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-material",
    "mypy",
    "pip-audit",
    "pre-commit",
    "pymarkdownlnt",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "radon",
    "ruff",
    "safety",
    "testcontainers",
    "types-cachetools",
    "types-requests",
    "vulture",
    "xenon",
]
otel = [
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-http",
]
logfire = [
    "logfire",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["guard_core"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".env",
    ".envrc",
    ".venv/",
    ".github/",
    ".claude/",
    "CLAUDE.md",
    ".pre-commit-config.yaml",
    "compose.yml",
    "Dockerfile",
    "Makefile",
    "mkdocs.yml",
    "vulture_whitelist.py",
    "tests/",
    "docs/",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py310"
exclude = ["vulture_whitelist.py", ".venv"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "I",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=guard_core --cov-branch --cov-report=term-missing -m 'not integration'"
markers = [
    "asyncio: mark tests as async",
    "integration: marks tests that require Docker + external services (deselect with '-m \"not integration\"')",
]

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
exclude = ["vulture_whitelist.py", ".venv"]

[[tool.mypy.overrides]]
module = "redis.*"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "guard_agent"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "guard_agent.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "guard_core.sync.*"
disable_error_code = ["arg-type", "return-value", "assignment"]

[[tool.mypy.overrides]]
module = "opentelemetry.*"
follow_imports = "skip"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "logfire"
follow_imports = "skip"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true

[tool.pymarkdown.plugins.md003]
enabled = false

[tool.pymarkdown.plugins.md022]
enabled = false

[tool.pymarkdown.plugins.md032]
enabled = false

[tool.pymarkdown.plugins.md007]
enabled = true
indent = 2

[tool.pymarkdown.plugins.md012]
enabled = true
maximum = 2

[tool.pymarkdown.plugins.md013]
enabled = false

[tool.pymarkdown.plugins.md024]
enabled = true
siblings_only = true

[tool.pymarkdown.plugins.md033]
enabled = false

[tool.pymarkdown.plugins.md035]
enabled = false

[tool.pymarkdown.plugins.md041]
enabled = false

[tool.pymarkdown.plugins.md046]
enabled = false

[tool.pymarkdown.plugins.md029]
enabled = false

[tool.vulture]
paths = ["guard_core", "tests", "vulture_whitelist.py"]
exclude = ["**/conftest.py", ".venv"]
min_confidence = 100
ignore_decorators = [
    "@app.route",
    "@app.get",
    "@app.post",
    "@app.put",
    "@app.delete",
    "@app.patch",
    "@pytest.fixture",
    "@pytest.mark.*",
    "@validator",
    "@root_validator",
    "@field_validator",
    "@model_validator",
]
ignore_names = [
    "test_*",
    "Test*",
    "cleanup_*",
    "mock_*",
    "expected_*",
    "exc_*",
    "__*__",
    "Config",
    "Field",
]
sort_by_size = true

[tool.bandit]
skips = ["B101", "B601"]
exclude_dirs = ["tests", ".venv", "vulture_whitelist.py"]
severity = "medium"

[tool.radon]
exclude = "tests/*,.venv/*,vulture_whitelist.py"
cc_min = "C"
mi_min = "A"
no_assert = false
show_closures = true
total_average = true

[tool.xenon]
max_absolute = "B"
max_modules = "A"
max_average = "A"
exclude = ["tests/*", ".venv/*", "vulture_whitelist.py"]
ignore = []

[tool.deptry]
exclude = ["tests", ".venv", "vulture_whitelist.py", "docs"]
extend_exclude = ["conftest.py"]
known_first_party = ["guard_core"]
per_rule_ignores = { "DEP002" = [
    "bandit",
    "deptry",
    "guard-agent",
    "mkdocs",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-material",
    "mypy",
    "pip-audit",
    "pre-commit",
    "pymarkdownlnt",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "radon",
    "ruff",
    "safety",
    "semgrep",
    "testcontainers",
    "types-cachetools",
    "types-requests",
    "vulture",
    "xenon",
], "DEP003" = [
    "guard-agent",
] }

[tool.deptry.package_module_name_map]
opentelemetry-sdk = "opentelemetry"
opentelemetry-exporter-otlp-proto-http = "opentelemetry"
